<resources>
    <string name="app_name">my11app</string>
    <string name="action_settings">Settings</string>
    <string name="turn_bt_on">turn bt on</string>
    <string name="turn_bt_off">turn bt off</string>
    <string name="start_scan">start scan</string>
    <string name="stop_scan">stop scan</string>
    <string name="results">results</string>
    <string name="start_foreground_service">start_foreground_service</string>
    <string name="stop_foreground_service">stop_foreground_service</string>
    <string name="start_scanning">start_scanning</string>
    <string name="stop_scanning">stop_scanning</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="saveChanges">Save</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
