<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="72dp"
            android:text="@string/turn_bt_on"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/turn_bt_off"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt_on"
            app:layout_constraintStart_toEndOf="@+id/bt_on" />

        <Button
            android:id="@+id/startScanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/start_scan"
            app:layout_constraintStart_toStartOf="@+id/results"
            app:layout_constraintTop_toBottomOf="@+id/bt_on" />

        <Button
            android:id="@+id/stopScanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_scan"
            app:layout_constraintBottom_toTopOf="@+id/results"
            app:layout_constraintStart_toStartOf="@+id/bt_off" />

        <TextView
            android:id="@+id/results"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="46dp"
            android:text="@string/results"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startScanButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>